<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tvNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_for_a_city_to_show_weather"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/errorContainer"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:textColor="@android:color/black" android:textStyle="bold"
                android:textSize="30sp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/tvErrorMessage"
                app:layout_constraintVertical_chainStyle="packed"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvErrorMessage"
                android:text="@string/city_not_found"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/tvError" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="20sp"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/dataContainer"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/tvCity" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textSize="30sp"
                    android:textColor="@android:color/black" android:textStyle="bold"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:id="@+id/tvCurrentTemperature" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvCity" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textColor="@color/colorPrimary" android:textStyle="bold"
                    android:textSize="60sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTempMax"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toEndOf="@+id/tvCurrentTemperature" android:layout_marginStart="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvTempMin"
                    app:layout_constraintTop_toTopOf="@+id/tvCurrentTemperature" android:textSize="20sp"
                    app:layout_constraintVertical_chainStyle="spread_inside" android:layout_marginTop="8dp"
                    android:textStyle="bold" android:textColor="@color/colorPrimary"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTempMin"
                    android:includeFontPadding="false"
                    app:layout_constraintBottom_toBottomOf="@+id/tvCurrentTemperature"
                    app:layout_constraintStart_toEndOf="@+id/tvCurrentTemperature" android:layout_marginStart="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvTempMax"
                    android:textSize="20sp" android:layout_marginBottom="8dp" android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvWeatherType" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvMeasuredAt"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvWeatherDescription" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvWeatherType" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:textColor="@android:color/black" android:textSize="16sp"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCloudPercentage" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvWeatherDescription"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:textSize="16sp"
                    android:textColor="@android:color/black" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPressure" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/tvCloudPercentage"
                    android:textSize="16sp" android:textColor="@android:color/black"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHumidity" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/tvPressure"
                    android:textSize="16sp" android:textColor="@android:color/black"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvWindSpeed" android:textSize="16sp"
                    android:textColor="@android:color/black" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvHumidity"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvWindDegree" android:textSize="16sp"
                    android:textColor="@android:color/black" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvWindSpeed" android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_data"
                    android:id="@+id/tvBasicData" android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/tvCurrentTemperature"
                    android:textColor="@android:color/black" android:textStyle="bold" android:layout_marginStart="16dp"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvMeasuredAt" android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvBasicData" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:textColor="@color/colorAccent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
